fix footer content align screen-sm+

--- a/wp/wp-content/themes/dsk/assets/less/app.less
+++ b/wp/wp-content/themes/dsk/assets/less/app.less
@@ -193,7 +193,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    .footer-socials {
       text-align: center;
    }
-   .credits {
+   .credit {
       text-align: right;
    }
 }
